# jupiter-rust-sdk

./: Cargo.toml
examples/: Cargo.toml  concurrent_usage.rs
src/: client.rs  error.rs  lib.rs  types.rs  ultra.rs
src/api/: lend.rs  mod.rs  price.rs  recurring.rs  send.rs  studio.rs  swap.rs  token.rs  trigger.rs  ultra.rs
src/models/: common.rs  mod.rs  order.rs  tx.rs
src/models/lend/: mod.rs
src/models/price/: mod.rs
src/models/recurring/: mod.rs
src/models/send/: mod.rs
src/models/studio/: mod.rs
src/models/swap/: mod.rs
src/models/token/: mod.rs
src/models/trigger/: mod.rs
src/models/ultra/: mod.rs  order.rs
