[package]
name = "jupiter-sdk-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "multi_chain"
path = "multi_chain.rs"

[[bin]]
name = "error_handling"
path = "error_handling.rs"

[[bin]]
name = "concurrent_usage"
path = "concurrent_usage.rs"

[dependencies]
jupiter-sdk = { path = ".." }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
